--- a/chart/templates/jobs/create-user-job.yaml
+++ b/chart/templates/jobs/create-user-job.yaml
@@ -93,6 +93,7 @@ spec:
           {{- include "custom_airflow_environment_from" . | default "\n  []" | indent 10 }}
           env:
           {{- include "custom_airflow_environment" . | indent 10 }}
+          {{- include "webserver_secrets_environment" . | indent 10 }}
           {{- include "standard_airflow_environment" . | indent 10 }}
           resources:
 {{ toYaml .Values.createUserJob.resources | indent 12 }}
