--- a/chart/templates/_helpers.yaml
+++ b/chart/templates/_helpers.yaml
@@ -156,6 +156,7 @@ If release name contains chart name it will be used as a full name.
       secretKeyRef:
         name: {{ $config.secretName }}
         key: {{ default "value" $config.secretKey }}
+        optional: false
   {{- end }}
 {{- end }}
 
