--- a/chart/templates/_helpers.yaml
+++ b/chart/templates/_helpers.yaml
@@ -569,6 +569,19 @@ Create the name of the cleanup service account to use
 {{- end -}}
 {{- end -}}
 
+{{/*
+Create the name of the ecrsync service account to use
+*/}}
+{{- define "ecrsync.serviceAccountName" -}}
+{{- if .Values.ecrsync.serviceAccount.create -}}
+    {{ default (printf "%s-ecrsync" (include "airflow.fullname" .)) .Values.ecrsync.serviceAccount.name }}
+{{- else -}}
+    {{ default "default" .Values.ecrsync.serviceAccount.name }}
+{{- end -}}
+{{- end -}}
+
+
+
 {{ define "wait-for-migrations-command" }}
   {{- if semverCompare ">=2.0.0" .Values.airflowVersion }}
   - airflow
